--- a/.pre-commit-config-optional.yaml
+++ b/.pre-commit-config-optional.yaml
@@ -7,4 +7,4 @@ repos:
     rev: v3.13.6
     hooks:
       - id: markdown-link-check
-        args: [--quiet, --config=.markdown-link-check.json]
+        args: [-q]
