--- a/.github/workflows/build-and-test-differential.yaml
+++ b/.github/workflows/build-and-test-differential.yaml
@@ -2,6 +2,8 @@ name: build-and-test-differential
 
 on:
   pull_request:
+    paths:
+      - autoware_lanelet2_map_validator/**
     types:
       - opened
       - synchronize
