--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -2,6 +2,8 @@ name: build-and-test
 
 on:
   push:
+    paths:
+      - autoware_lanelet2_map_validator/**
   schedule:
     - cron: 0 0 * * *
   workflow_dispatch:
