--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,5 +1,5 @@
 ### Automatically generated from package.xml ###
 
-map/autoware_lanelet2_map_validator/** anh.nguyen.2@tier4.jp mamoru.sobue@tier4.jp masahiro.sakamoto@tier4.jp shintaro.sakoda@tier4.jp taiki.yamada@tier4.jp yamato.ando@tier4.jp
+* anh.nguyen.2@tier4.jp mamoru.sobue@tier4.jp masahiro.sakamoto@tier4.jp shintaro.sakoda@tier4.jp taiki.yamada@tier4.jp yamato.ando@tier4.jp
 
 ### Copied from .github/CODEOWNERS-manual ###
