--- a/.github/workflows/build-and-test-differential.yaml
+++ b/.github/workflows/build-and-test-differential.yaml
@@ -23,11 +23,9 @@ jobs:
         id: check-changes
         run: |
           if git diff --name-only ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }} | grep -q '^autoware_lanelet2_map_validator/'; then
-            echo "changes_found=true" >> $GITHUB_ENV
-            echo "::set-output name=changes_found::true"
+            echo "changes_found=true" >> "$GITHUB_OUTPUT"
           else
-            echo "changes_found=false" >> $GITHUB_ENV
-            echo "::set-output name=changes_found::false"
+            echo "changes_found=false" >> "$GITHUB_OUTPUT"
           fi
 
   build-and-test-differential:
