Fixed CI algorithm
Signed-off-by: TaikiYamada4 <taiki.yamada@tier4.jp>

--- a/.github/workflows/build-and-test-differential.yaml
+++ b/.github/workflows/build-and-test-differential.yaml
@@ -29,11 +29,14 @@ jobs:
         id: check-changes-and-label
         run: |
           if git diff --name-only ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }} | grep -q '^autoware_lanelet2_map_validator/'; then
+            echo "changes detected"
             echo "changed=true" >> "$GITHUB_OUTPUT"
           else
+            echo "changes not detected"
             echo "changed=false" >> "$GITHUB_OUTPUT"
           fi
           if  [ "${{ needs.prevent-no-label-execution.outputs.run }}" != 'true' ]; then
+            echo "label tag:run-build-and-test-differential not set yet"
             exit 1
           fi
 
@@ -41,7 +44,7 @@ jobs:
     needs:
       - check-directory-changes-and-label
       - prevent-no-label-execution
-    if: ${{ needs.check-directory-changes.outputs.changes_detected == 'true' && needs.prevent-no-label-execution.outputs.run == 'true' }}
+    if: ${{ needs.check-directory-changes-and-label.outputs.changes_detected == 'true' && needs.prevent-no-label-execution.outputs.run == 'true' }}
     runs-on: ubuntu-22.04
     container: ${{ matrix.container }}${{ matrix.container-suffix }}
     strategy:
@@ -58,13 +61,6 @@ jobs:
             build-depends-repos: build_depends.repos
 
     steps:
-      - name: Check No Label Execution
-        run: |
-          if [ "${{ needs.prevent-no-label-execution.outputs.run }}" != 'true' ]; then
-            echo "tag:run-build-and-test-differential is missing"
-            exit 1
-          fi
-
       - name: Set PR fetch depth
         run: echo "PR_FETCH_DEPTH=$(( ${{ github.event.pull_request.commits }} + 1 ))" >> "${GITHUB_ENV}"
 
