--- a/.github/workflows/build-and-test-differential.yaml
+++ b/.github/workflows/build-and-test-differential.yaml
@@ -117,8 +117,9 @@ jobs:
     steps:
       - name: Check job results
         run: |
-          if [[ "${{ needs.build-and-test-differential.result }}" == "skipped" || "${{ needs.build-and-test-differential.result }}" == "success" ]] then;
+          if [[ "${{ needs.build-and-test-differential.result }}" == "skipped" || "${{ needs.build-and-test-differential.result }}" == "success" ]]; then
             echo "build-and-test-differential has no errors"
           else
+            echo "colcon build or colcon test has failed"
             exit 1
           fi
