--- a/.github/workflows/build-and-test-differential.yaml
+++ b/.github/workflows/build-and-test-differential.yaml
@@ -111,13 +111,18 @@ jobs:
 
   summarize-jobs:
     needs:
+      - prevent-no-label-execution
+      - check-directory-changes-and-label
       - build-and-test-differential
     runs-on: ubuntu-22.04
     if: always()
     steps:
       - name: Check job results
         run: |
-          if [[ "${{ needs.build-and-test-differential.result }}" == "skipped" || "${{ needs.build-and-test-differential.result }}" == "success" ]]; then
+          if [[ "${{ needs.prevent-no-label-execution.outputs.run }}" != 'true' || "${{ needs.build-and-test-differential.result }}" == "success" ]]; then
+            echo "autoware_lanelet2_map_validator directory has changed but label tag:run-build-and-test-differential not set yet"
+            exit 1
+          elif [[ "${{ needs.build-and-test-differential.result }}" == 'skipped' || "${{ needs.build-and-test-differential.result }}" == 'success' ]]; then
             echo "build-and-test-differential has no errors"
           else
             echo "colcon build or colcon test has failed"
