added ref: ${{ github.event.pull_request.head.sha }}
Signed-off-by: TaikiYamada4 <taiki.yamada@tier4.jp>

--- a/.github/workflows/fix_changelog_url.yaml
+++ b/.github/workflows/fix_changelog_url.yaml
@@ -12,6 +12,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
+          ref: ${{ github.event.pull_request.head.sha }}
           fetch-depth: 0
 
       - name: Apply Fixes to CHANGELOG.rst
