--- a/.github/workflows/fix_changelog_url.yaml
+++ b/.github/workflows/fix_changelog_url.yaml
@@ -4,6 +4,10 @@ on:
     paths:
       - autoware_lanelet2_map_validator/CHANGELOG.rst
 
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
   fix-changelog-url:
     runs-on: ubuntu-22.04
@@ -37,6 +41,6 @@ jobs:
           if git diff --cached --quiet; then
             echo "No changes to commit."
           else
-            git commit -m "Auto-fix CHANGELOG.rst formatting"
+            git commit -s -m "auto-fix CHANGELOG.rst formatting"
             git push origin HEAD:${{ github.event.pull_request.head.ref }}
           fi
