Added debug commands
Signed-off-by: TaikiYamada4 <taiki.yamada@tier4.jp>

--- a/.github/workflows/build-and-test-differential.yaml
+++ b/.github/workflows/build-and-test-differential.yaml
@@ -43,6 +43,11 @@ jobs:
           fetch-depth: ${{ env.PR_FETCH_DEPTH }}
           path: autoware_lanelet2_map_validator
 
+      - name: Debug
+        run: |
+          echo "$GITHUB_WORKSPACE"
+          tree
+
       - name: Show disk space before the tasks
         run: df -h
 
