--- a/.github/workflows/build-and-test-differential.yaml
+++ b/.github/workflows/build-and-test-differential.yaml
@@ -97,7 +97,7 @@ jobs:
       - name: Check job results
         run: |
           if [[ "${{ needs.prevent-no-label-execution.outputs.run }}" != "true" ]]; then
-            if git diff --name-only ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }} | grep -q '^autoware_lanelet2_map_validator/'; then
+            if git diff --name-only ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }} | grep -qE '^autoware_lanelet2_map_validator/(src/|test/|CMakeLists.txt|package.xml)'; then
               echo "autoware_lanelet2_map_validator directory has changed but label tag:run-build-and-test-differential not set yet"
               exit 1
             fi
