--- a/autoware_lanelet2_map_validator/CMakeLists.txt
+++ b/autoware_lanelet2_map_validator/CMakeLists.txt
@@ -68,11 +68,12 @@ if(BUILD_TESTING)
 endif()
 
 install(
-  FILES package.xml autoware_requirement_set.json
+  FILES package.xml
   DESTINATION share/${PROJECT_NAME}
 )
 
 ament_auto_package(
   INSTALL_TO_SHARE
   test/data
+  map_requirements
 )
