added implementation of parameter loading
Signed-off-by: TaikiYamada4 <taiki.yamada@tier4.jp>

--- a/autoware_lanelet2_map_validator/CMakeLists.txt
+++ b/autoware_lanelet2_map_validator/CMakeLists.txt
@@ -6,6 +6,7 @@ autoware_package()
 
 ament_auto_find_build_dependencies()
 find_package(nlohmann_json REQUIRED)
+find_package(yaml-cpp REQUIRED)
 
 file(GLOB_RECURSE autoware_lanelet2_map_validator_lib_src
   src/common/*.cpp
@@ -22,6 +23,10 @@ target_include_directories(
 )
 
 ament_target_dependencies(autoware_lanelet2_map_validator_lib nlohmann_json)
+
+target_link_libraries(autoware_lanelet2_map_validator_lib
+  yaml-cpp
+)
 
 ament_auto_add_executable(autoware_lanelet2_map_validator
   src/main.cpp
@@ -75,4 +80,5 @@ install(
 ament_auto_package(
   INSTALL_TO_SHARE
   test/data
+  config
 )
