--- a/.github/workflows/spell-check-all.yaml
+++ b/.github/workflows/spell-check-all.yaml
@@ -8,10 +8,11 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - name: Check out repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Run spell-check
         uses: autowarefoundation/autoware-github-actions/spell-check@v1
         with:
           cspell-json-url: https://raw.githubusercontent.com/autowarefoundation/autoware-spell-check-dict/main/.cspell.json
+          local-cspell-json: .cspell.json
           incremental-files-only: false
