--- a/.github/workflows/sync-files.yaml
+++ b/.github/workflows/sync-files.yaml
@@ -34,4 +34,5 @@ jobs:
           pr-labels: |
             tag:bot
             tag:sync-files
+          pr-reviewers: TaikiYamada4
           auto-merge-method: squash
