change the name from centerline_stick_out to centerline_geometry
Signed-off-by: TaikiYamada4 <taiki.yamada@tier4.jp>

--- a/autoware_lanelet2_map_validator/config/params.yaml
+++ b/autoware_lanelet2_map_validator/config/params.yaml
@@ -1,4 +1,4 @@
-mapping.lane.centerline_stick_out:
+mapping.lane.centerline_geometry:
   dimension_mode: 3D
   planar_threshold: 0.01
   height_threshold: 0.1
