feat: validate overlaps between paths of virtual_traffic_lights (#53)
Signed-off-by: TaikiYamada4 <taiki.yamada@tier4.jp>
Signed-off-by: Mamoru Sobue <hilo.soblin@gmail.com>
Signed-off-by: Mamoru Sobue <mamoru.sobue@tier4.jp>
Co-authored-by: Mamoru Sobue <hilo.soblin@gmail.com>

--- a/autoware_lanelet2_map_validator/config/params.yaml
+++ b/autoware_lanelet2_map_validator/config/params.yaml
@@ -4,3 +4,5 @@ mapping.intersection.regulatory_element_details_for_virtual_traffic_lights:
   supported_refers_type: [intersection_coordination]
 mapping.intersection.virtual_traffic_light_line_order:
   validation_target_refers: [intersection_coordination]
+mapping.intersection.virtual_traffic_light_section_overlap:
+  validation_target_refers: [intersection_coordination]
