--- a/autoware_lanelet2_map_validator/config/params.yaml
+++ b/autoware_lanelet2_map_validator/config/params.yaml
@@ -1,3 +1,7 @@
+mapping.lane.centerline_geometry:
+  dimension_mode: 3D
+  planar_threshold: 0.01
+  height_threshold: 0.1
 mapping.lane.border_sharing:
   iou_threshold: 0.05
 mapping.intersection.regulatory_element_details_for_virtual_traffic_lights:
