--- a/.github/workflows/github-release.yaml
+++ b/.github/workflows/github-release.yaml
@@ -7,7 +7,7 @@ name: github-release
 on:
   push:
     tags:
-      - "[0-9]+.[0-9]+.[0-9]+"
+      - "[0-9]+.[0-9]+.[0-9]+*"
   workflow_dispatch:
     inputs:
       tag-name:
@@ -17,12 +17,10 @@ on:
 
 jobs:
   # Build and package the binaries
-  # This job builds the package and creates a zip file containing the built artifacts.
   build-and-package:
     runs-on: ubuntu-22.04
     container: ghcr.io/autowarefoundation/autoware:core-devel
     steps:
-      # ref: build-and-test.yaml
       - name: Check out repository
         uses: actions/checkout@v4
         with:
@@ -41,12 +39,16 @@ jobs:
         with:
           rosdistro: humble
           target-packages: ${{ steps.get-self-packages.outputs.self-packages }}
-          build-depends-repos: build_depends.repos
 
       - name: Package artifacts
         run: |
-          VERSION=${{ github.ref_name }}
-          zip -r autoware_lanelet2_map_validator-${VERSION#v}-ubuntu-22.04.zip install
+          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+            REF_NAME="${{ github.event.inputs.tag-name }}"
+          else
+            REF_NAME="${{ github.ref_name }}"
+          fi
+          VERSION=${REF_NAME#v}
+          zip -r autoware_lanelet2_map_validator-${VERSION}-ubuntu-22.04.zip install
       
       - name: Upload artifact
         uses: actions/upload-artifact@v4
@@ -67,5 +69,5 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           files: autoware_lanelet2_map_validator-*.zip
-        draft: true
-        generate_release_notes: true
+          draft: true
+          generate_release_notes: true
