--- a/.github/workflows/github-release.yaml
+++ b/.github/workflows/github-release.yaml
@@ -1,20 +1,3 @@
-# This file is automatically synced from:
-# https://github.com/autowarefoundation/sync-file-templates
-# To make changes, update the source repository and follow the guidelines in its README.
-
-name: github-release
-
-on:
-  push:
-    tags:
-      - "[0-9]+.[0-9]+.[0-9]+*"
-  workflow_dispatch:
-    inputs:
-      tag-name:
-        description: The name of the tag to release
-        type: string
-        required: true
-
 jobs:
   # Build and package the binaries
   build-and-package:
@@ -25,6 +8,11 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 1
+
+      - name: Install zip utility
+        run: |
+          apt-get update
+          apt-get install -y zip
 
       - name: Remove exec_depend
         uses: autowarefoundation/autoware-github-actions/remove-exec-depend@v1
@@ -55,19 +43,3 @@ jobs:
         with:
           name: autoware_lanelet2_map_validator-artifact
           path: autoware_lanelet2_map_validator-*.zip
-
-  github-release:
-    runs-on: ubuntu-22.04
-    needs: build-and-package
-    steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: autoware_lanelet2_map_validator-artifact
-
-      - name: Upload release assets
-        uses: softprops/action-gh-release@v2
-        with:
-          files: autoware_lanelet2_map_validator-*.zip
-          draft: true
-          generate_release_notes: true
