--- a/.github/workflows/github-release.yaml
+++ b/.github/workflows/github-release.yaml
@@ -73,6 +73,7 @@ jobs:
       - name: Upload release assets
         uses: softprops/action-gh-release@v2
         with:
+          body_path: ""
           files: autoware_lanelet2_map_validator-*.zip
           draft: true
           generate_release_notes: true
