--- a/.github/workflows/github-release.yaml
+++ b/.github/workflows/github-release.yaml
@@ -40,8 +40,7 @@ jobs:
         with:
           rosdistro: humble
           target-packages: autoware_lanelet2_map_validator
-          cmake-args: |
-            -DCMAKE_BUILD_TYPE=Release
+          cmake-build-type: Release
 
       - name: Get Release Version
         id: get_version
