fix: add library to zip component

--- a/.github/workflows/github-release.yaml
+++ b/.github/workflows/github-release.yaml
@@ -60,9 +60,12 @@ jobs:
         run: |
           VERSION=${{ steps.get_version.outputs.version }}
           ZIP_NAME="autoware_lanelet2_map_validator-${VERSION}-ubuntu-22.04.zip"
-          zip -r $ZIP_NAME build/autoware_lanelet2_map_validator/autoware_lanelet2_map_validator \
-            install/autoware_lanelet2_map_validator/share/autoware_lanelet2_map_validator/config \
-            install/autoware_lanelet2_map_validator/share/autoware_lanelet2_map_validator/map_requirements 
+          mkdir release_package
+          cp build/autoware_lanelet2_map_validator/autoware_lanelet2_map_validator release_package/
+          cp build/autoware_lanelet2_map_validator/libautoware_lanelet2_map_validator_lib.so release_package/
+          cp -r install/autoware_lanelet2_map_validator/share/autoware_lanelet2_map_validator/config release_package/
+          cp -r install/autoware_lanelet2_map_validator/share/autoware_lanelet2_map_validator/map_requirements release_package/
+          zip -r $ZIP_NAME release_package 
           echo "zip_name=$ZIP_NAME" >> $GITHUB_OUTPUT
 
       - name: Sign the package with GPG
