fix: source path

--- a/.github/workflows/github-release.yaml
+++ b/.github/workflows/github-release.yaml
@@ -39,6 +39,7 @@ jobs:
 
       - name: Build the package in Release mode
         run: |
+          source /autoware/install/setup.bash
           colcon build \
             --packages-select autoware_lanelet2_map_validator \
             --symlink-install \
