--- a/.github/workflows/github-release.yaml
+++ b/.github/workflows/github-release.yaml
@@ -37,13 +37,16 @@ jobs:
       - name: Remove exec_depend
         uses: autowarefoundation/autoware-github-actions/remove-exec-depend@v1
 
-      - name: Build the package in Release mode
+      - name: Build the package for Release
+        shell: bash
         run: |
+          DEBIAN_FRONTEND=noninteractive rosdep install -yqq --from-paths . --ignore-src --rosdistro humble -r
           source /autoware/install/setup.bash
           colcon build \
             --packages-select autoware_lanelet2_map_validator \
             --symlink-install \
-            --cmake-args "-DCMAKE_BUILD_TYPE=Release"
+            --cmake-args "-DCMAKE_BUILD_TYPE=Release" "-DBUILD_TESTING=OFF" \
+            --event-handlers console_cohesion+
 
       - name: Get Release Version
         id: get_version
