fix: zip components path

--- a/.github/workflows/github-release.yaml
+++ b/.github/workflows/github-release.yaml
@@ -55,9 +55,8 @@ jobs:
           
           colcon build \
             --packages-select autoware_lanelet2_map_validator \
-            --symlink-install \
             --event-handlers console_cohesion+ \
-            --cmake-args "-DCMAKE_BUILD_TYPE=Release" "-DBUILD_TESTING=OFF"
+            --cmake-args "-DCMAKE_BUILD_TYPE=Release"
 
       - name: Get Release Version
         id: get_version
@@ -75,12 +74,10 @@ jobs:
         run: |
           VERSION=${{ steps.get_version.outputs.version }}
           ZIP_NAME="autoware_lanelet2_map_validator-${VERSION}-ubuntu-22.04.zip"
-          mkdir release_package
-          cp build/autoware_lanelet2_map_validator/autoware_lanelet2_map_validator release_package/
-          cp build/autoware_lanelet2_map_validator/libautoware_lanelet2_map_validator_lib.so release_package/
-          cp -r install/autoware_lanelet2_map_validator/share/autoware_lanelet2_map_validator/config release_package/
-          cp -r install/autoware_lanelet2_map_validator/share/autoware_lanelet2_map_validator/map_requirements release_package/
-          zip -r $ZIP_NAME release_package 
+          zip -r $ZIP_NAME build/autoware_lanelet2_map_validator/autoware_lanelet2_map_validator \
+            build/autoware_lanelet2_map_validator/libautoware_lanelet2_map_validator_lib.so \
+            install/autoware_lanelet2_map_validator/share/autoware_lanelet2_map_validator/config \
+            install/autoware_lanelet2_map_validator/share/autoware_lanelet2_map_validator/map_requirements
           echo "zip_name=$ZIP_NAME" >> $GITHUB_OUTPUT
 
       - name: Sign the package with GPG
